--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="palette" id="palette"></div>
     <button id="generate-btn">Generate Palette</button>
   </div>
+  
+  <div id="notificationContainer"></div>
   <script src="script.js"></script>
 </body>
 </html>
